# GameMissionEditor

GMEditor/: CMakeLists.txt
GMEditor/launch/: CMakeLists.txt  interface.cpp  interface.h  main.cpp
GMEditor/plugins/: CMakeLists.txt
GMEditor/plugins/core/: CMakeLists.txt  gmeditorwindow.cpp  gmeditorwindow.h  mainwindow.ui  plugininterface.cpp  plugininterface.h
doc/: README.md
